feat: ability to create functions via api
